--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My First Ever Gitthub Repo in MacOs</title>
 </head>
 <body>
-    
+    <h1>Bishmillahir rahmanir rahim</h1>
 </body>
 </html>
